# grievios

./: README.md  pyproject.toml  requirements.txt
grievios/: common.py  crud.py  database.py  main.py  models.py  schemas.py
grievios/analyzers/: __init__.py  exploration_analyzer.py
grievios/analyzers/ios/: __init__.py  ios_analyzer.py  mitmdump.py  tcpdump.py
grievios/exploration/: exploration_session.py  exploration_session_options.py  exploration_worker.py
grievios/strategies/: __init__.py  exploration_strategy.py
grievios/strategies/ios/: __init__.py  idle.py  ios_strategy.py  random_button.py
grievios/utils/: ipa.py
grievios/utils/cmdline_utils/: __init__.py  cmdline_util.py  ideviceid.py  ideviceinfo.py  ideviceinstaller.py  mitmdump.py  rvictl.py  tcpdump.py
grievios/web/: dependencies.py
grievios/web/routers/: __init__.py  appium_servers.py  devices.py  explorations.py
grievios/web/templates/: appium-servers.html  base.html  devices.html  explorations.html  index.html
